fix for labels when editing is on in collapsed topics

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -2336,7 +2336,7 @@ table.mod-data-default-template {
 
 
 body.editing.format-topcoll .section .activity.modtype_label.label .no-overflow .no-overflow {
-    margin-right: 8em;
+    margin-right: 7.25em;
 }
 
 @media (max-width: 1199.98px) {
